Updated some styles for greater compatibility on IOS.

--- a/src/styles/text.css
+++ b/src/styles/text.css
@@ -11,8 +11,8 @@
   font-size: var(--text-speedometer-size);
   color: white;
   user-select: none;
+  -webkit-user-select: none;
   transform: rotateX(180deg);
-
 }
 
 .text-pink {
